# Venus-Blue

./: .gitignore  README.md  Tasks.md
dashboard/: README.md  docker-compose.yml
dashboard/backend/: Dockerfile  app.py  common.py  main.py  mqtt_thread.py  requirements.txt
dashboard/frontend/: Dockerfile  package.json
dashboard/frontend/src/: App.css  navbar.tsx
dashboard/frontend/src/pages/: home.tsx
docs/: Key Performance Indicators.md  README.md
pedal/: pi_mqtt.py  pi_serial.py
pedal/nucleo/Test_Uart/: .cproject  .mxproject  .project  Test_Uart Debug.launch  Test_Uart.ioc
pedal/nucleo/Test_Uart/Core/Inc/: stm32l4xx_it.h  uart.h
pedal/nucleo/Test_Uart/Core/Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
pedal/nucleo/Test_Uart/Debug/: Test_Uart.elf  Test_Uart.list  Test_Uart.map  makefile  objects.list  sources.mk
pedal/nucleo/Test_Uart/Debug/Core/Src/: main.cyclo  main.su  subdir.mk
pedal/nucleo/Test_Uart/Debug/Core/Startup/: subdir.mk
pedal/nucleo/Test_Uart/Debug/USB_HOST/App/: subdir.mk
pedal/nucleo/Test_Uart/USB_HOST/App/: usb_host.c  usb_host.h
pedal/nucleo/mycode/: README.md  build.sh
pedal/nucleo/mycode/apps/project/: .skipfile  CMakeLists.txt  prj.conf
pedal/nucleo/mycode/apps/project/boards/: nrf52840dk_nrf52840.overlay
pedal/nucleo/mycode/apps/project/src/: main.c
pedal/nucleo/mycode/apps/test/async_uart/: prj.conf
pedal/nucleo/mycode/apps/test/shell/: prj.conf
pedal/nucleo/mycode/include/: async_uart.h  pc_json_requests.h
pedal/nucleo/mycode/mylib/: async_uart.c  pc_json_requests.c
turtlebot/: README.md
turtlebot/.devcontainer/: devcontainer.json  dockerfile
turtlebot/log/: latest_build
turtlebot/scripts/: setup.bash
turtlebot/src/venusblue/: CMakeLists.txt  package.xml
turtlebot/src/venusblue/launch/: venusblue.launch
turtlebot/src/venusblue/scripts/: mock.py
turtlebot/src/venusblue/src/: main.cpp  venusblue.cpp  venusblue.hpp
turtlebot/src/venusbluecpp/: CMakeLists.txt  package.xml
turtlebot/src/venusbluecpp/launch/: venusblue.launch
turtlebot/src/venusbluecpp/src/: main.cpp  venusblue.cpp  venusblue.hpp
turtlebot/src/venusbluepy/: package.xml  setup.cfg  setup.py
turtlebot/src/venusbluepy/launch/: venusblue.launch
turtlebot/src/venusbluepy/venusbluepy/: tracker.py  venusblue.py
(+26 files in other folders)
